--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<app-home></app-home>
+<div [class.mt-24]="router.url !== '/'"
+[class.mx-auto]="router.url !== '/'"
+[class.container]="router.url !== '/'">
+    <router-outlet></router-outlet>
+</div>
