--- a/client/src/layouts/navbar/navbar.html
+++ b/client/src/layouts/navbar/navbar.html
@@ -65,7 +65,13 @@
                 <input type="text" placeholder="Email" class="input" [(ngModel)]="creds.email" name="email" required>
                 <input type="password" placeholder="Password" class="input" [(ngModel)]="creds.password" name="password"
                     required>
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button 
+                class="btn btn-primary" type="submit">
+                @if(loading()){
+                    <span class="mr-2 loading loading-infinity"></span>
+                }
+                Login
+            </button>
             </form>
             }
         </div>
